force-app/main/default/objects/Employee/fields/Innova_Department__c.field-meta.xml
<CustomField>
    <fullName>Innova_Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>