force-app/main/default/objects/Employee/fields/Innova_FederationId__c.field-meta.xml
<CustomField>
    <fullName>Innova_FederationId__c</fullName>
    <label>FederationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>