force-app/main/default/objects/Employee/fields/Innova_Hire_date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Hire_date__c</fullName>
    <label>Hire date</label>
    <type>Date</type>
</CustomField>