force-app/main/default/objects/Employee/fields/Innova_Title__c.field-meta.xml
<CustomField>
    <fullName>Innova_Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>