force-app/main/default/objects/Employee/fields/Innova_Username__c.field-meta.xml
<CustomField>
    <fullName>Innova_Username__c</fullName>
    <label>Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>