force-app/main/default/objects/Employee/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>Name</columns>
    <columns>EmployeeNumber</columns>
    <columns>Email</columns>
    <columns>LastModifiedDate</columns>
    <columns>RelatedPerson</columns>
    <columns>User</columns>
    <columns>Innova_Username__c</columns>
    <columns>Id</columns>
    <filterScope>Everything</filterScope>
    <label>All Employees</label>
</ListView>